# pm

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile
backend/: AGENTS.md  pyproject.toml
backend/app/: ai_client.py  board_ops.py  database.py  login_page.py  main.py  models.py  session.py
backend/app/routes/: api.py  auth.py  frontend.py
backend/tests/: conftest.py  test_activity_api.py  test_ai_client.py  test_ai_connectivity_api.py  test_auth_flow.py  test_board_api.py  test_board_archive_api.py  test_board_chat_api.py  test_board_import_api.py  test_board_ops.py  test_board_stats_api.py  test_board_templates_api.py  test_chat_api.py  test_checklist_api.py  test_checklist_ops.py  test_comments_api.py  test_dashboard_stats_api.py  test_multi_board_api.py  test_registration.py  test_registration_flow.py  test_user_profile_api.py  test_wip_clear_api.py  test_workflow_integration.py
docs/: DATA_MODEL.md  PLAN.md  code_review.md
frontend/: AGENTS.md  README.md  next.config.ts  vitest.config.ts
frontend/src/app/: layout.test.tsx  layout.tsx  page.test.tsx  page.tsx
frontend/src/components/: AddColumnButton.test.tsx  AddColumnButton.tsx  BoardDashboard.test.tsx  BoardDashboard.tsx  KanbanBoard.test.tsx  KanbanBoard.tsx  KanbanCard.test.tsx  KanbanCard.tsx  KanbanCardPreview.test.tsx  KanbanColumn.test.tsx  KanbanColumn.tsx  NewCardForm.test.tsx  NewCardForm.tsx
frontend/src/lib/: kanban.ts
frontend/tests/: kanban.spec.ts
scripts/: AGENTS.md  start-linux.sh  start-mac.sh  start-windows.ps1  stop-linux.sh  stop-windows.ps1
