[project]
name = "udemy-pm-backend"
version = "0.1.0"
description = "FastAPI backend for the Project Management MVP"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.116.1",
  "openai>=1.108.1",
  "python-dotenv>=1.2.2",
  "uvicorn>=0.35.0",
]

[tool.uv]
package = false

[dependency-groups]
dev = [
  "pytest>=8.4.0",
  "httpx>=0.28.1",
]

[tool.pytest.ini_options]
pythonpath = ["."]
